fix rendering bug - contact overflowed on text on mobile

--- a/_includes/css/grayscale.css
+++ b/_includes/css/grayscale.css
@@ -393,8 +393,6 @@ img.scroll-down {
   color: #fff;
 
   padding-top: 100px;
-
-  height: 100%;
   width: 100%;
   border: 0;
   background-repeat: no-repeat;
@@ -421,4 +419,8 @@ h2.about-title {
     font-size: 12pt;
     vertical-align: left;
     text-align: left;
+}
+
+.contact-text {
+    min-height: 500px;
 }
